update code navigation

--- a/l09/public/css/lamsao.css
+++ b/l09/public/css/lamsao.css
@@ -84,5 +84,80 @@ ul.favor li a:hover{
 	color: #2ca9e1;
 }
 /*
+BEGIN NAVIGATION
+ */
+nav{
+	background: #2ca9e1;
+}
+nav ul{
+	list-style: none;
+    list-style-type: none;
+    height: 45px;
+    line-height: 45px;
+    display: block;
+    /*width: 960px;*/
+    /*margin: auto;*/
+    position: relative;
+}
+
+nav ul li{
+	display: block;
+	float: left;
+	min-width: 80px;
+	text-align: center;
+	border-right: 1px dashed #ccc;
+	position: relative;
+}
+nav ul li:last-child{
+	border-right: none;
+}
+nav ul li:hover{
+	background-color: lightblue;
+}
+nav ul li a{
+	display: block;
+	color: #fff;
+	text-decoration: none;
+	padding: 0 10px;
+}
+nav ul li ul.dropdown{
+	display: none;
+	position: absolute;
+	top: 45px;
+	left: 0;
+	width: 170px;
+}
+nav ul li ul.dropdown li{
+	display: block;
+	background-color: #2ca9e1;
+	border: none;
+}
+nav ul li ul.dropdown li:hover{
+	background-color: lightblue;
+}
+nav ul li:hover>ul.dropdown, 
+nav ul li.mega-menu:hover>.mega-content{
+	display: block;
+}
+nav ul ul ul.dropdown{
+	top: 0;
+	left: 100%;
+}
+nav ul li.mega-menu{
+	position: static;
+}
+nav ul li.mega-menu>.mega-content{
+	display: none;
+	position: absolute;
+	top: 45px;
+	left: 0;
+	right: 0;
+	min-height: 200px;
+	background: aqua;
+}
+/*
+END NAVIGATION
+ */
+/*
 	END HEADER
  */
