--- a/l11/public/css/lamsao.css
+++ b/l11/public/css/lamsao.css
@@ -307,3 +307,18 @@ END NAVIGATION
 /*
 	END main content
  */
+
+.go-to-top{
+	position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 30px;
+    right: 30px;
+    background: #fff;
+    border: 5px solid #ff4d92;
+    border-radius: 49%;
+    text-align: center;
+    line-height: 45px;
+    color: #ff4d92;
+    font-size: 30px;
+}
